<?xml version="1.0" encoding="utf-8"?>


<resources>

    <string name="label_themes">Themes</string>
    <string name="label_new_theme">New Theme</string>

    <string name="hint_enter_theme_name">Enter theme name</string>
    <string name="hint_enter_theme_author">Enter theme author</string>
    <string name="hint_enter_theme_desc">Short description</string>
    <string name="hint_theme_name" translatable="false">Darcula</string>
    <string name="hint_theme_author" translatable="false">Squircle CE</string>
    <string name="hint_theme_desc">Default color scheme</string>

    <string name="action_select">Select</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>

    <string name="dialog_title_color_picker">Color Picker</string>

    <string name="message_saved">Saved</string>
    <string name="message_selected">Selected «%1$s»</string>
    <string name="message_new_theme_available">New theme available: %1$s</string>
    <string name="message_theme_removed">Theme «%1$s» removed</string>
    <string name="message_theme_syntax_exception">An error occurred when reading theme file</string>

    <string name="theme_property_text_color">Defines the text color of the editor</string>
    <string name="theme_property_cursor_color">Defines the cursor color of the editor</string>
    <string name="theme_property_background_color">Defines the background color of the editor</string>
    <string name="theme_property_gutter_color">Defines the background color of gutter</string>
    <string name="theme_property_gutter_divider_color">Defines the divider color of gutter</string>
    <string name="theme_property_gutter_current_line_number_color">Defines the line number color of selected line in gutter</string>
    <string name="theme_property_gutter_text_color">Defines the line numbers color in gutter</string>
    <string name="theme_property_selected_line_color">Defines color of selected line in the editor</string>
    <string name="theme_property_selection_color">Defines the selection color in the editor</string>
    <string name="theme_property_suggestion_query_color">Defines the suggestion text color in dropdown menu</string>
    <string name="theme_property_find_result_background_color">Defines the background color of found results</string>
    <string name="theme_property_delimiter_background_color">Defines the background color of matching delimiters</string>
    <string name="theme_property_numbers_color">Defines the numbers color of syntax highlighting: 123, 0.5, 0xFF, etc.</string>
    <string name="theme_property_operators_color">Defines the operators color of syntax highlighting: +-*/=, [, ], {, }, (, )</string>
    <string name="theme_property_keywords_color">Defines the keywords color of syntax highlighting: function, if, else, etc.</string>
    <string name="theme_property_types_color">Defines the types color of syntax highlighting: const, var, let, etc.</string>
    <string name="theme_property_lang_const_color">Defines the language constants color of syntax highlighting: true, false, null, etc.</string>
    <string name="theme_property_preprocessor_color">Defines the preprocessor and annotation color: @Override, #include, …</string>
    <string name="theme_property_variables_color">Defines the variables color of syntax highlighting</string>
    <string name="theme_property_methods_color">Defines the methods color of syntax highlighting</string>
    <string name="theme_property_strings_color">Defines the string literals color of syntax highlighting</string>
    <string name="theme_property_comments_color">Defines the comments color of syntax highlighting: //, /**/</string>
    <string name="theme_property_tag_color">Defines the color of tags in markup languages: &lt;, &lt;&gt;, /&gt;</string>
    <string name="theme_property_tag_name_color">Defines the color of tag names in markup languages: &lt;tag&gt;</string>
    <string name="theme_property_attr_name_color">Defines the color of attribute names in markup languages: &lt;tag attr=…/&gt;</string>
    <string name="theme_property_attr_value_color">Defines the color of attribute values in markup languages: &lt;tag attr=\"value\"/&gt;</string>
    <string name="theme_property_entity_ref_color">Defines the color of entity references in markup languages: &amp;amp; &amp;lt; &amp;gt; …</string>

</resources>