<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/Widget.MaterialComponents.Toolbar.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="4dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        android:id="@+id/toolbar"
        app:title="@string/label_new_theme"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="?colorOnSurface" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textSize="12sp"
                android:text="@string/hint_enter_theme_name"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:singleLine="true"
                android:hint="@string/hint_theme_name"
                android:id="@+id/text_input_theme_name"
                tools:text="Darcula"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textSize="12sp"
                android:text="@string/hint_enter_theme_author"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:singleLine="true"
                android:hint="@string/hint_theme_author"
                android:id="@+id/text_input_theme_author"
                tools:text="Squircle CE"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textSize="12sp"
                android:text="@string/hint_enter_theme_desc"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:singleLine="true"
                android:hint="@string/hint_theme_desc"
                android:id="@+id/text_input_theme_description"
                tools:text="Default color scheme"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.AppTheme.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/common_save"
                android:enabled="false"
                android:id="@+id/action_save"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                android:id="@+id/recycler_view"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_property"
                tools:itemCount="10"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>